--- a/accueil.html
+++ b/accueil.html
@@ -42,12 +42,14 @@
     <br>
     <section>
         <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
             <img src="img/1re annonce.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Appartement n°1</h5>
               <br>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h3>1515 €</h3>
             </div>
+            </a>
           </div>
     </section>
     <br>
