--- a/accueil.html
+++ b/accueil.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-    <!---- création d'un header --------->
+    <!-------------- Header ---------------->
     <header>
             <img src="img/POO Immo.png" class="img-thumbnail" alt="logo">
             <!-------------- navigation ---------------->
@@ -40,20 +40,115 @@
     </header>
     <br>
     <br>
+    <!---------------- Section ---------------->
     <section>
+      <!----------- 1ère ligne ------------>
+      <div class="d-flex justify-content-around">
         <div class="card" style="width: 18rem;">
           <a href="#" class="btn">
-            <img src="img/1re annonce.jpg" class="card-img-top" alt="...">
+            <img src="img/1re annonce.jpg" class="card-img-top" alt="appartement n°1">
             <div class="card-body">
               <h5 class="card-title">Appartement n°1</h5>
               <br>
               <h3>1515 €</h3>
             </div>
-            </a>
-          </div>
+          </a>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
+            <img src="img/1re annonce.jpg" class="card-img-top" alt="appartement n°2">
+            <div class="card-body">
+              <h5 class="card-title">Appartement n°2</h5>
+              <br>
+              <h3>1455 €</h3>
+            </div>
+          </a>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
+            <img src="img/1re annonce.jpg" class="card-img-top" alt="appartement n°3">
+            <div class="card-body">
+              <h5 class="card-title">Appartement n°3</h5>
+              <br>
+              <h3>1759 €</h3>
+            </div>
+          </a>
+        </div>
+      </div>
+      <br>
+      <br>
+      <!----------- 2ème ligne ------------>
+      <div class="d-flex justify-content-around">
+        <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
+            <img src="img/2eme annonce.jpg" class="card-img-top" alt="appartement n°3">
+            <div class="card-body">
+              <h5 class="card-title">Appartement n°4</h5>
+              <br>
+              <h3>2415 €</h3>
+            </div>
+          </a>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
+            <img src="img/3eme annonce.jpg" class="card-img-top" alt="appartement n°4">
+            <div class="card-body">
+              <h5 class="card-title">Appartement n°5</h5>
+              <br>
+              <h3>2279 €</h3>
+            </div>
+          </a>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
+            <img src="img/4eme annonce.jpg" class="card-img-top" alt="appartement n°5" style="height: 11em;">
+            <div class="card-body">
+              <h5 class="card-title">Appartement n°6</h5>
+              <br>
+              <h3>2829 €</h3>
+            </div>
+          </a>
+        </div>
+      </div>
+      <br>
+      <br>
+      <!------------ 3eme ligne ------------>
+      <div class="d-flex justify-content-around">
+        <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
+            <img src="img/5eme annonce.jpg" class="card-img-top" alt="appartement n°6">
+            <div class="card-body">
+              <h5 class="card-title">Appartement n°4</h5>
+              <br>
+              <h3>3689 €</h3>
+            </div>
+          </a>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
+            <img src="img/5eme annonce.jpg" class="card-img-top" alt="appartement n°6">
+            <div class="card-body">
+              <h5 class="card-title">Appartement n°5</h5>
+              <br>
+              <h3>3549 €</h3>
+            </div>
+          </a>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <a href="#" class="btn">
+            <img src="img/5eme annonce.jpg" class="card-img-top" alt="appartement n°6">
+            <div class="card-body">
+              <h5 class="card-title">Appartement n°6</h5>
+              <br>
+              <h3>3729 €</h3>
+            </div>
+          </a>
+        </div>
+      </div>
     </section>
     <br>
     <br>
+    <!--------------- Footer ---------------->
     <footer>
         <div class="footer">
             <p>© Copyright 2022 - POO Immo</p>
