--- a/annonce.html
+++ b/annonce.html
@@ -47,14 +47,28 @@
         <img src="img/1re annonce.jpg" class="img-annonce" alt="appartement n°1">
 
         <aside>
-            <form action="">
-                <h4>Contact</h4>
-
-                <label for="">Nom</label>
-                <input type="text">
-
-                <label for=""></label>
-            </form>
+            <div>
+                <form action="" method="post">
+                    <br>
+                    <h4>Contact</h4>
+                    <br>
+                    <br>
+                    <label for="name">* Nom :</label>
+                    <input type="text" name="name">
+                    <br>
+                    <br>
+                    <label for="email">* Email :</label>
+                    <input type="email" name="email">
+                    <br>
+                    <br>
+                    <label for="tel">* Tel :</label>
+                    <input type="tel" name="tel">
+                    <br>
+                    <br>
+                    <br>
+                    <button type="submit">Envoyer</button>
+                </form>
+            </div>
         </aside>
     </section>
     <br>
