--- a/annonce6.html
+++ b/annonce6.html
@@ -42,9 +42,9 @@
     <br>
     <!---------------- Section ---------------->
     <section>
-        <p class="h1">Titre annonce</p>
+        <h1>Titre annonce</h1>
 
-        <img src="img/1re annonce.jpg" class="img-annonce" alt="appartement n°1">
+        <img src="img/4eme annonce.jpg" class="img-annonce" alt="appartement n°1">
 
         <aside>
             <div>
@@ -53,23 +53,51 @@
                     <h4>Contact</h4>
                     <br>
                     <br>
-                    <label for="name">* Nom :</label>
+                    <label for="name"><span style="color: red; font-weight: bold;">*</span> Nom :</label>
                     <input type="text" name="name">
                     <br>
                     <br>
-                    <label for="email">* Email :</label>
+                    <br>
+                    <label for="email"><span style="color: red; font-weight: bold;">*</span> Email :</label>
                     <input type="email" name="email">
                     <br>
                     <br>
-                    <label for="tel">* Tel :</label>
+                    <br>
+                    <label for="tel"><span style="color: red; font-weight: bold;">*</span> Tele :</label>
                     <input type="tel" name="tel">
                     <br>
                     <br>
                     <br>
-                    <button type="submit">Envoyer</button>
+                    <br>
+                    <button type="submit"><span style="font-size: 20px;">Envoyer</span></button>
                 </form>
             </div>
         </aside>
+        <br>
+        <br>
+        <br>
+        <div class="choix">
+            <br>
+            <h2>1515 €</h2>
+            <br>
+            <br>
+            <button type="button" style="background-color: #69B092; border: 1px solid #69B092"><span style="font-size: 30px;">Louer</span></button>
+            <br>
+            <br>
+            <br>
+            <button type="button" style="background-color: #71E28A; border: 1px solid #71E28A;"><span style="font-size: 30px;">Acheter</span></button>
+        </div>
+        <div class="description">
+            <br>
+            <h3>Description</h3>
+            <br>
+            <p>Lorem ipsum dolor sit amet. Ea dolorem culpa est debitis aperiam sed quia voluptatem qui suscipit ipsam ea galisum maxime aut eveniet nihil vel voluptatem impedit.
+               <br>
+               <br>
+               Vel tenetur consequuntur et optio officiis ut autem molestiae quo quidem velit qui praesentium quibusdam rem delectus aliquid in quia esse. Sit cumque accusamus non rerum.
+            </p>
+        </div>
+        
     </section>
     <br>
     <br>
