--- a/accueil.html
+++ b/accueil.html
@@ -52,7 +52,7 @@
       <!----------- 1ère ligne ------------>
       <div class="d-flex justify-content-around">
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce123.html" class="btn">
             <img src="img/1re annonce.jpg" class="card-img-top" alt="appartement n°1">
             <div class="card-body">
               <h5 class="card-title">Appartement n°1</h5>
@@ -62,7 +62,7 @@
           </a>
         </div>
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce123.html" class="btn">
             <img src="img/1re annonce.jpg" class="card-img-top" alt="appartement n°2">
             <div class="card-body">
               <h5 class="card-title">Appartement n°2</h5>
@@ -72,7 +72,7 @@
           </a>
         </div>
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce123.html" class="btn">
             <img src="img/1re annonce.jpg" class="card-img-top" alt="appartement n°3">
             <div class="card-body">
               <h5 class="card-title">Appartement n°3</h5>
@@ -87,7 +87,7 @@
       <!----------- 2ème ligne ------------>
       <div class="d-flex justify-content-around">
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce4.html" class="btn">
             <img src="img/2eme annonce.jpg" class="card-img-top" alt="appartement n°3">
             <div class="card-body">
               <h5 class="card-title">Appartement n°4</h5>
@@ -97,7 +97,7 @@
           </a>
         </div>
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce5.html" class="btn">
             <img src="img/3eme annonce.jpg" class="card-img-top" alt="appartement n°4">
             <div class="card-body">
               <h5 class="card-title">Appartement n°5</h5>
@@ -107,7 +107,7 @@
           </a>
         </div>
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce6.html" class="btn">
             <img src="img/4eme annonce.jpg" class="card-img-top" alt="appartement n°5" style="height: 11em;">
             <div class="card-body">
               <h5 class="card-title">Appartement n°6</h5>
@@ -122,7 +122,7 @@
       <!------------ 3eme ligne ------------>
       <div class="d-flex justify-content-around">
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce789.html" class="btn">
             <img src="img/5eme annonce.jpg" class="card-img-top" alt="appartement n°6">
             <div class="card-body">
               <h5 class="card-title">Appartement n°7</h5>
@@ -132,7 +132,7 @@
           </a>
         </div>
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce789.html" class="btn">
             <img src="img/5eme annonce.jpg" class="card-img-top" alt="appartement n°6">
             <div class="card-body">
               <h5 class="card-title">Appartement n°8</h5>
@@ -142,7 +142,7 @@
           </a>
         </div>
         <div class="card" style="width: 18rem;">
-          <a href="#" class="btn">
+          <a href="annonce789.html" class="btn">
             <img src="img/5eme annonce.jpg" class="card-img-top" alt="appartement n°6">
             <div class="card-body">
               <h5 class="card-title">Appartement n°9</h5>
